--- a/app/assets/stylesheets/_pet.scss
+++ b/app/assets/stylesheets/_pet.scss
@@ -67,6 +67,35 @@
 
             }
 
+            .checkbox-list {
+
+                display: flex;
+                justify-content: flex-start;
+                align-content: center;
+                flex-flow: row wrap;
+                width: 200px;
+                margin-bottom: 20px;
+        
+                label,
+                input[type=checkbox] {
+                    width: auto;
+                    margin: 0;
+                    padding: 0;
+                    font-size: 16px;
+                    line-height: 16px;
+                    height: auto;
+                    display: inline-block;
+                    width: 30px;
+                    margin: 10px 0 5px;
+                }
+                label {
+                    flex: 1 0;
+                    flex-basis: auto;
+                    width: 170px;
+                }
+        
+            }
+
         }
 
     }
