--- a/app/assets/stylesheets/_petsitter.scss
+++ b/app/assets/stylesheets/_petsitter.scss
@@ -59,21 +59,42 @@
                 overflow: hidden;
             }
 
-            // .link-button,
-            // input[type=submit]{
-            //     width: auto;
-            //     width: 150px;
-            //     padding: 5px 15px;
-            //     margin: 20px auto 0;
-            //     display: block;
-            //     border: 1px solid $base_green;
-            //     text-align: center;
+            .link-button,
+            input[type=submit]{
 
-            //     &:hover {
-            //         background-color: $base_green;
-            //         color: $white_green;
-            //     }
-            // }
+                width: 150px;
+                margin: 20px auto 0;
+
+            }
+
+            .checkbox-list {
+
+                display: flex;
+                justify-content: flex-start;
+                align-content: center;
+                flex-flow: row wrap;
+                width: 200px;
+                margin-bottom: 20px;
+        
+                label,
+                input[type=checkbox] {
+                    width: auto;
+                    margin: 0;
+                    padding: 0;
+                    font-size: 16px;
+                    line-height: 16px;
+                    height: auto;
+                    display: inline-block;
+                    width: 30px;
+                    margin: 10px 0 5px;
+                }
+                label {
+                    flex: 1 0;
+                    flex-basis: auto;
+                    width: 170px;
+                }
+        
+            }
 
         }
 
